--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>个人简历</title>
+    <meta name="description" content="羊羊羊，Java全栈工程师，精通前端和后端开发，擅长Java、Spring Boot、React，分享编程经验与项目实战案例。">
+    <meta name="keywords" content="羊羊羊，Java全栈工程师, 前端开发, 后端开发, React, Vue, Spring Boot, 微服务, MySQL, Redis, 技术Wiki">
+
+    <meta property="og:title" content="羊羊羊 - Java全栈工程师 | 前端开发 | 后端开发 | 技术Wiki">
+    <meta property="og:description" content="羊羊羊，Java全栈工程师，精通前端和后端开发，擅长Java、Spring Boot、React，分享编程经验与项目实战案例。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.yanglichao.com/">
+
+    <title>羊羊羊 - Java全栈工程师 | 前端开发 | 后端开发 | 技术Wiki</title>
     <style>
         :root {
             --bg1: #0a192f;
@@ -279,8 +287,8 @@
         <h1>姓名</h1>
         <div class="title">Java 全栈工程师 · 企业级系统</div>
         <div class="section contact">
-            <div>📱 手机：186-xxxx-xxxx</div>
-            <div>✉️ 邮箱：you@example.com</div>
+            <div>📱 手机：178-6582-****</div>
+            <div>✉️ 邮箱：yanglichao96@gmail.com</div>
             <div style="display: none">🌐 GitHub：github.com/xxx</div>
         </div>
 
@@ -316,7 +324,7 @@
                 </ul>
             </div>
         </div>
-        
+
         <div class="section">
             <h2>项目经历</h2>
             <div class="project">
