--- a/index.html
+++ b/index.html
@@ -384,6 +384,13 @@
                 </tbody>
             </table>
         </div>
+        <div class="section">
+            <h2>站内链接</h2>
+            <div>
+                <a href="https://wiki.yanglichao.com/" target="_blank">Wiki</a>
+                <a href="https://tools.yanglichao.com/" target="_blank">Tools</a>
+            </div>
+        </div>
     </section>
 </main>
 
