--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <div class="section">
             <h2>站内链接</h2>
             <div>
-                <a href="https://wiki.yanglichao.com/" target="_blank">Wiki</a>
+                <a href="https://wiki.yanglichao.com/" target="_blank">Wiki</a> 、
                 <a href="https://tools.yanglichao.com/" target="_blank">Tools</a>
             </div>
         </div>
